--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="hero">
         <h1 class="title">Yo soy Jimmy Molina</h1>
-          <div class="botones">
+        <p class="descripcion">Ecuatoriano, aficionado a la programación y a las nuevas tecnologias.</p>
+        <div class="botones">
             <a href="https://github.com/jimxfr" target="_blank" class="btn github">
             <i class="fa-brands fa-github"></i>
             GitHub
